<resources>
    <string name="app">NewNode VPN</string>

    <string name="connecting">Connecting…</string>
    <string name="connected">CONNECTED</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="tap_to_connect">tap to connect to NewNode VPN</string>
    <string name="tap_to_disconnect">tap to disconnect</string>
    <string name="info_how_it_works">How NewNode Works</string>
    <string name="statistic_header">YOUR CONNECTION</string>
    <string name="statistic_timeframe_day"><u>Day</u></string>
    <string name="statistic_timeframe_week"><u>Week</u></string>
    <string name="statistic_timeframe_month"><u>Month</u></string>
    <string name="statistic_timeframe_year"><u>Year</u></string>
    <string name="statistic_timeframe_all_time"><u>All time</u></string>
    <string name="statistic_direct_connections">Direct connections: %1$s</string>
    <string name="statistic_peer_connections">Peer connections: %1$s</string>
    <string name="statistic_byte">B</string>
    <string name="statistic_kilo_byte">KB</string>
    <string name="statistic_mega_byte">MB</string>
    <string name="statistic_giga_byte">GB</string>
    <string name="statistic_tera_byte">TB</string>
    <string name="info1">NewNode is a peer to peer mesh network which works as a personal pseudo-VPN to get around blocking or establish good internet connection when connectivity is sparse.</string>
    <string name="info2">NewNode works differently than a traditional VPN, which sends your connection to a specific server. Traditional VPNs are unfortunately quite easy to block by IP address. NewNode, instead, sends your traffic through a mesh network which can even make connections directly between nearby devices. This, along with encrypting and  disguising the traffic, makes NewNode very robust against any kind of blocking.</string>
    <string name="info3">There is no location selector because the NewNode network is globally distributed. </string>
</resources>
